# recallable

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Codex-GPT-5.4_2026-03-22.md  Combined-Critique_2026-03-22.md  Combined-Critique_2026-03-22_remaining.md  GUIDE.md  Makefile  README.md
fuzz/: Cargo.toml
fuzz/corpus/json_memento/: valid.json
fuzz/fuzz_targets/: common.rs  json_memento.rs  postcard_memento.rs
recallable/: Cargo.toml
recallable-macro/: Cargo.toml  MACRO_INTERNALS.md
recallable-macro/src/: context.rs  lib.rs  model_macro.rs
recallable-macro/src/context/: from_impl.rs  internal.rs  memento.rs  memento_struct.rs  recall_impl.rs  recallable_impl.rs  utils.rs
recallable-macro/src/context/from_impl/: enums.rs  mod.rs  structs.rs
recallable-macro/src/context/internal/: bounds.rs  enums.rs  fields.rs  generics.rs  ir.rs  lifetime.rs  shared.rs  structs.rs  util.rs
recallable-macro/src/context/internal/enums/: bounds.rs  ir.rs  mod.rs
recallable-macro/src/context/internal/serde_attrs/: merge.rs  mod.rs  parse.rs  types.rs
recallable-macro/src/context/internal/shared/: bounds.rs  codegen.rs  env.rs  (+5 more)
recallable-macro/src/context/memento/: enums.rs  mod.rs  structs.rs
recallable-macro/src/context/recall_impl/: enums.rs  mod.rs  structs.rs
recallable-macro/src/context/recallable_impl/: enums.rs  mod.rs  structs.rs
recallable/examples/: basic_model.rs  impl_from_roundtrip.rs  manual_no_serde.rs  nested_generic.rs  postcard_roundtrip.rs
recallable/src/: lib.rs
recallable/tests/: basic.rs  container_impls.rs  enum_model.rs  enum_recall.rs  enum_recallable.rs  impl_from.rs  macro_expansion_failures.rs  no_serde.rs  postcard.rs  serde_json.rs
recallable/tests/common/: mod.rs
recallable/tests/ui/: derive_fail_borrowed_fields.rs  derive_fail_borrowed_fields.stderr  derive_fail_enum_borrowed_fields.rs  derive_fail_enum_borrowed_fields.stderr  derive_fail_enum_recall_nested.rs  derive_fail_enum_recall_nested.stderr  derive_fail_enum_recall_skip.rs  derive_fail_enum_recall_skip.stderr  derive_fail_lifetime_parameterized_struct.rs  derive_fail_lifetime_parameterized_struct.stderr  derive_fail_multiple_borrowed_fields.rs  derive_fail_multiple_borrowed_fields.stderr  derive_fail_non_struct.rs  derive_fail_non_struct.stderr  derive_fail_phantom_lifetime_without_skip.rs  derive_fail_phantom_lifetime_without_skip.stderr  derive_fail_recallable_conflicting_attributes.rs  derive_fail_recallable_conflicting_attributes.stderr  derive_fail_recallable_field_not_path.rs  derive_fail_recallable_field_not_path.stderr  derive_fail_recallable_field_not_simple_generic.rs  derive_fail_recallable_field_not_simple_generic.stderr  derive_fail_recallable_name_value_parameter.rs  derive_fail_recallable_name_value_parameter.stderr  derive_fail_recallable_skip_on_struct.rs  derive_fail_recallable_skip_on_struct.stderr  derive_fail_recallable_skip_with_unknown_parameter.rs  derive_fail_recallable_skip_with_unknown_parameter.stderr  derive_fail_recallable_unknown_parameter.rs  derive_fail_recallable_unknown_parameter.stderr  derive_fail_serde_attr_on_skip.rs  derive_fail_serde_attr_on_skip.stderr  derive_fail_serde_rename_conflict.rs  derive_fail_serde_rename_conflict.stderr  derive_pass_enum_no_warnings.rs  derive_pass_memento_derive_off.rs  derive_pass_skip_memento_default_derives.rs  model_fail_duplicate_serialize.rs  model_fail_duplicate_serialize.stderr  model_fail_duplicate_serialize_fully_qualified.rs  (+15 more)
(+17 files in other folders)
