[package]
name = "recallable-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
postcard = { version = "1.1.3", default-features = false, features = ["heapless"] }
recallable = { path = "../recallable", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

[[bin]]
name = "json_memento"
path = "fuzz_targets/json_memento.rs"
test = false
doc = false
bench = false

[[bin]]
name = "postcard_memento"
path = "fuzz_targets/postcard_memento.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
